# Agentic-module

./: .env.example  .gitignore  CLAUDE.md  PROJECT.MD  README.md  day1.txt  day2.txt  day3.txt  day4.txt  day5.txt  pyproject.toml
.agent/skills/answering-support-questions/: SKILL.md  eval_cases.json
.agent/skills/drafting-customer-replies/: SKILL.md  eval_cases.json
docs/: booking_rules.md  cancellation_policy.md  equipment_policy.md  escalation_policy.md  payment_policy.md  privacy_policy.md  refund_policy.md  safety_rules.md  support_guidelines.md  weather_policy.md
evals/: README.md  adversarial.yaml  adversarial_policy.yaml  drift_cases.yaml  golden.yaml  judge_golden.yaml  judge_prompts.md  report_golden.yaml
meta/: agent_security_policy.md  golden_dataset_spec.md  intent_drift_signals.md  learning_notes.md  tool_registry.json  vibe_diff_checklist.md
meta/agents/: README.md  evaluator_agent.card.json  security_reviewer_agent.card.json  support_agent.card.json
scripts/: red_blue_green_demo.py
specs/: README.md
src/sandbox/: __init__.py  api.py  canary.py  db.py  models.py
tests/: test_adversarial.py  test_bm25.py  test_build_dashboard.py  test_canary.py  test_classify_ticket.py  test_create_ticket.py  test_draft_reply.py  test_evaluate_answer.py  test_generate_report.py  test_golden.py  test_health.py  test_llm_provider.py  test_observability.py  test_orchestrator.py  test_passk.py  test_policy_server.py  test_policy_server_integration.py  test_red_blue_green.py  test_retrieve_docs.py  test_skills_trigger.py  test_tool_registry.py
(+53 files in other folders)
