[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Agentic Support & Operations Sandbox - Kaggle 5-Day AI Agents Vibe Coding Course"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "William Z." }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
llm = ["openai>=1.50", "httpx>=0.27"]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
